# tellykeys

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
cinnamon-applet/tellykeys@robert/: applet.js  metadata.json  stylesheet.css
design/: build_canvas.py  build_canvas_sexy.py  quiet-transmission.md  velvet-signal.md
docs/: index.html  llms.txt
packaging/: tellykeys-tray.desktop  tellykeys.desktop
packaging/flatpak/: org.gaimsdevsoftware.TellyKeys.desktop  org.gaimsdevsoftware.TellyKeys.yml
packaging/linux/: tellykeys-tray.desktop  tellykeys.desktop
scripts/: build-deb  build-flatpak  build-rpm  capture-screenshot  install-cinnamon-applet  install-desktop-launcher  tellykeys-bluetooth-keyboard-helper  tellykeys-bluetooth-system-fix  tellykeys-bluetooth-system-unfix
src/tellykeys/: __init__.py  app.py  bluetooth_hid.py  discovery.py  remote.py  settings.py
tests/: test_discovery.py  test_settings.py
